--- a/src/html/CorredorFooter.html
+++ b/src/html/CorredorFooter.html
@@ -1,12 +1,30 @@
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- Corredor-3 -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-6475907504235292"
-     data-ad-slot="8038131424"
-     data-ad-format="auto"></ins>
+<ul id="neos21-footer-link">
+  <li><a href="http://neo.s21.xrea.com/">Neo's World</a></li>
+  <li><a href="https://github.com/Neos21GitHub/">GitHub</a></li>
+  <li><a href="http://qiita.com/Neos21">Qiita</a></li>
+  <li><a href="http://neos21.hatenablog.jp/">Murga</a></li>
+  <li><a href="http://neos21.hateblo.jp/"></a></li>
+</ul>
+<div id="neos21-adsense-footer" class="neos21-adsense-footer">
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <!-- Corredor-3 -->
+  <ins class="adsbygoogle"
+       style="display:block"
+       data-ad-client="ca-pub-6475907504235292"
+       data-ad-slot="8038131424"
+       data-ad-format="auto"></ins>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
+</div>
+<div id="neos21-template">
+  <ul class="neos21-share" id="neos21-share-template">
+    <li class="neos21-share-hatebu"><a class="neos21-share-hatebu-link"><i class="blogicon-bookmark"></i><span>Bookmark</span></a></li>
+    <li class="neos21-share-twitter"><a class="neos21-share-twitter-link"><i class="blogicon-twitter"></i><span>Twitter</span></a></li>
+    <li class="neos21-share-facebook"><a class="neos21-share-facebook-link"><i class="blogicon-facebook"></i><span>Facebook</span></a></li>
+    <li class="neos21-share-pocket"><a class="neos21-share-pocket-link"><i class="blogicon-chevron-down"></i><span>Pocket</span></a></li>
+  </ul>
+</div>
 <script>
-(adsbygoogle = window.adsbygoogle || []).push({});
+  !function(e,t,n,r){var o=function(t){return-1!==(r+e.body.className+r).replace(/[\n\t]/g,r).indexOf(r+t+r)},a=function(r,o){var a=e[n]("neos21-share-template");a.removeAttribute("id"),Array.prototype.forEach.call(e[t](r),function(e){var n=e[t]("entry-title-link")[0],r=encodeURIComponent(n.innerText),i=n.getAttribute("href"),c=a.cloneNode(!0),h=function(e,n){c[t]("neos21-share-"+e+"-link")[0].setAttribute("href",n)};h("hatebu","http://b.hatena.ne.jp/entry/"+i),h("twitter","https://twitter.com/share?url="+i+"&amp;text="+r),h("facebook","http://www.facebook.com/share.php?u="+i),h("pocket","http://getpocket.com/edit?url="+i+"&amp;title="+r),e[t](o)[0].appendChild(c)}),e[n]("neos21-template").removeChild(a)},i=function(r){var o=e[n]("neos21-adsense-footer"),a=o.cloneNode(!0);o.parentNode.removeChild(o),e[t](r)[0].appendChild(a)};e.addEventListener("DOMContentLoaded",function(){o("page-index")?(a("hentry","customized-footer"),i("hentry")):o("page-archive")?(a("archive-entry","archive-entry-body"),i("archive-entry")):o("page-entry")&&i("hentry")},!1)}(document,"getElementsByClassName","getElementById"," ");
 </script>
-<div id="neos21-template"><ul class="neos21-share" id="neos21-share-template"><li class="neos21-share-hatebu"><a class="neos21-share-hatebu-link"><i class="blogicon-bookmark"></i><span>Bookmark</span></a></li><li class="neos21-share-twitter"><a class="neos21-share-twitter-link"><i class="blogicon-twitter"></i><span>Twitter</span></a></li><li class="neos21-share-facebook"><a class="neos21-share-facebook-link"><i class="blogicon-facebook"></i><span>Facebook</span></a></li><li class="neos21-share-pocket"><a class="neos21-share-pocket-link"><i class="blogicon-chevron-down"></i><span>Pocket</span></a></li></ul></div>
-<script>!function(){var d=document,i="getElementById",c="getElementsByClassName",q="setAttribute",f="href",s=" ",h=function(C){return ~(s+d.body.className+s).replace(/[\n\t]/g,s).indexOf(s+"page-"+C+s)},a,e,n="neos21-",r="share-",w=n+r,l="-link",t="template";if(h("index"))a=d[c]("hentry"),e="customized-footer";else{if(!h("archive"))return;a=d[c]("archive-entry"),e="archive-entry-body"}d.addEventListener("DOMContentLoaded",function(){var T=d[i](w+t);T.removeAttribute("id");Array.prototype.forEach.call(a,function(A){var L=A[c]("entry-title"+l)[0],E=encodeURIComponent(L.innerText),P=L.getAttribute(f),o=T.cloneNode(1),x=function(N,U){o[c](w+N+l)[0][q](f,U)};x("hatebu","http://b.hatena.ne.jp/entry/"+P);x("twitter","https://twitter.com/share?url="+P+"&amp;text="+E);x("facebook","http://www.facebook.com/share.php?u="+P);x("pocket","http://getpocket.com/edit?url="+P+"&amp;title="+E);A[c](e)[0].appendChild(o)});d[i](n+t).removeChild(T)},0)}()</script>
