--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <ul>
           <li><a href="http://neos21.hatenablog.com/">Corredor</a></li>
           <li><a href="http://neos21.hatenablog.jp/">Murga</a></li>
-          <li><a href="http://neos21.hateblo.jp/"></a></li>
+          <li><a href="http://neos21.hateblo.jp/">El Mylar</a></li>
         </ul>
         <section>
           <h2>gulp-clean-css</h2>
