--- a/src/html/CorredorSidebarProfile.html
+++ b/src/html/CorredorSidebarProfile.html
@@ -1,3 +1,4 @@
+<a href="/about" class="hatena-id-link">Neos21</a> <i class="blog-sprite-pro"></i>
 ウェブ・プログラミングの勉強メモ。
 <ul class="neos21-follow">
   <li class="neos21-follow-hatena"><a href="http://blog.hatena.ne.jp/neos21/neos21.hatenablog.com/subscribe"><i class="blogicon-hatenablog"></i><span>はてな</span></a></li>
