--- a/src/html/MurgaSidebarProfile.html
+++ b/src/html/MurgaSidebarProfile.html
@@ -1,3 +1,4 @@
+<a href="/about" class="hatena-id-link">Neos21</a> <i class="blog-sprite-pro"></i>
 個人的に言いたいコト・主張・気持ち。
 <ul class="neos21-follow">
   <li class="neos21-follow-hatena"><a href="http://blog.hatena.ne.jp/neos21/neos21.hatenablog.jp/subscribe"><i class="blogicon-hatenablog"></i><span>はてな</span></a></li>
