--- a/src/html/CorredorFooter.html
+++ b/src/html/CorredorFooter.html
@@ -3,7 +3,7 @@
   <li><a href="https://github.com/Neos21GitHub/">GitHub</a></li>
   <li><a href="http://qiita.com/Neos21">Qiita</a></li>
   <li><a href="http://neos21.hatenablog.jp/">Murga</a></li>
-  <li><a href="http://neos21.hateblo.jp/"></a></li>
+  <li><a href="http://neos21.hateblo.jp/">El Mylar</a></li>
 </ul>
 <div id="neos21-adsense-footer" class="neos21-adsense-footer">
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
