フッタリンクに Bit-Archer を追加

--- a/src/html/MurgaFooter.html
+++ b/src/html/MurgaFooter.html
@@ -1,9 +1,9 @@
 <ul id="neos21-footer-link">
   <li><a href="http://neo.s21.xrea.com/">Neo's World</a></li>
   <li><a href="https://github.com/Neos21GitHub/">GitHub</a></li>
-  <li><a href="http://qiita.com/Neos21">Qiita</a></li>
   <li><a href="http://neos21.hatenablog.com/">Corredor</a></li>
   <li><a href="http://neos21.hateblo.jp/">El Mylar</a></li>
+  <li><a href="http://bit-archer.hatenablog.com/">Bit-Archer</a></li>
 </ul>
 <div id="neos21-adsense-footer" class="neos21-adsense-footer">
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -19,9 +19,9 @@
 </div>
 <div id="neos21-template">
   <ul class="neos21-share" id="neos21-share-template">
-    <li class="neos21-share-hatebu"><a class="neos21-share-hatebu-link"><i class="blogicon-bookmark"></i><span>Bookmark</span></a></li>
-    <li class="neos21-share-twitter"><a class="neos21-share-twitter-link"><i class="blogicon-twitter"></i><span>Twitter</span></a></li>
-    <li class="neos21-share-facebook"><a class="neos21-share-facebook-link"><i class="blogicon-facebook"></i><span>Facebook</span></a></li>
-    <li class="neos21-share-pocket"><a class="neos21-share-pocket-link"><i class="blogicon-chevron-down"></i><span>Pocket</span></a></li>
+    <li class="neos21-share-hatebu"><a class="neos21-share-hatebu-link" target="_blank"><i class="blogicon-bookmark"></i><span>Bookmark</span></a></li>
+    <li class="neos21-share-twitter"><a class="neos21-share-twitter-link" target="_blank"><i class="blogicon-twitter"></i><span>Twitter</span></a></li>
+    <li class="neos21-share-facebook"><a class="neos21-share-facebook-link" target="_blank"><i class="blogicon-facebook"></i><span>Facebook</span></a></li>
+    <li class="neos21-share-pocket"><a class="neos21-share-pocket-link" target="_blank"><i class="blogicon-chevron-down"></i><span>Pocket</span></a></li>
   </ul>
 </div>
