Bit-Archer へのリンクを追加

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           <li><a href="http://neos21.hatenablog.com/">Corredor</a></li>
           <li><a href="http://neos21.hatenablog.jp/">Murga</a></li>
           <li><a href="http://neos21.hateblo.jp/">El Mylar</a></li>
+          <li><a href="http://bit-archer.hatenablog.com/">Bit-Archer</a></li>
         </ul>
         <section>
           <h2>gulp-clean-css</h2>
