--- a/src/html/CorredorHeader.html
+++ b/src/html/CorredorHeader.html
@@ -1,3 +1,7 @@
+<div id="go-to-menu">
+  <a href="#box2" title="メニューに移動する"><i class="blogicon-reorder"></i></a>
+</div>
+
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Corredor-1 -->
 <ins class="adsbygoogle"
