--- a/index.html
+++ b/index.html
@@ -2,14 +2,10 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author" content="Neo">
-    <meta name="copyright" content="Neo">
-    <meta name="robots" content="index, follow">
     <title>Hatena Blogs - Neo's GitHub Pages</title>
-    <link rel="stylesheet" href="../reset.css">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../styles.css">
   </head>
   <body id="neos21-github-io">
     <header id="header">
@@ -34,17 +30,27 @@
           <p>Uglify をラップしている Gulp プラグインで、JavaScript を圧縮しています。</p>
         </section>
         <section>
-          <h2>Copyright</h2>
-          <p>Created by Neo.</p>
+          <h2>Author</h2>
+          <p><a href="http://neo.s21.xrea.com/">Neo</a> (<a href="https://twitter.com/neos21">@Neos21</a>)</p>
+          <ul>
+            <li><a href="https://neos21github.github.io/HatenaBlogs/">GitHub Pages - Hatena Blogs</a></li>
+          </ul>
+        </section>
+        <section>
+          <h2>Links</h2>
           <ul>
             <li><a href="http://neo.s21.xrea.com/">Neo's World</a></li>
-            <li><a href="https://twitter.com/Neos21">Twitter - @Neos21</a></li>
+            <li><a href="http://neos21.hatenablog.com/">Corredor</a></li>
+            <li><a href="http://neos21.hatenablog.jp/">Murga</a></li>
+            <li><a href="http://neos21.hateblo.jp/">El Mylar</a></li>
+            <li><a href="http://bit-archer.hatenablog.com/">Bit-Archer</a></li>
+            <li><a href="https://github.com/Neos21GitHub/">GitHub - Neos21GitHub</a></li>
           </ul>
         </section>
       </section>
     </main>
     <footer id="footer">
-      <div id="copyright"><small>Copyright &copy; 2016-2017 <a href="../index.html">Neo's GitHub Pages</a>, All rights reserved.</small></div>
+      <div id="copyright"><small>Copyright &copy; 2016-2017 <a href="../index.html">Neo</a>, All rights reserved.</small></div>
     </footer>
   </body>
 </html>
