--- a/src/html/CorredorHeader.html
+++ b/src/html/CorredorHeader.html
@@ -1,5 +1,5 @@
-<div id="go-to-menu">
-  <a href="#box2" title="メニューに移動する"><i class="blogicon-reorder"></i></a>
+<div id="n-hm">
+  <a href="#" onclick="$('html,body').animate({scrollTop:$('.hatena-module-category').offset().top});return false;" title="カテゴリメニューに移動する"><i class="blogicon-reorder"></i></a>
 </div>
 
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -10,5 +10,5 @@
      data-ad-slot="2862253028"
      data-ad-format="auto"></ins>
 <script>
-(adsbygoogle = window.adsbygoogle || []).push({});
+  (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
