--- a/src/html/CorredorSidebarSponsoredLink.html
+++ b/src/html/CorredorSidebarSponsoredLink.html
@@ -1,12 +1,14 @@
-<div id="neos21-adsense-side">
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- Corredor-2 -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-6475907504235292"
-     data-ad-slot="6561398228"
-     data-ad-format="auto"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<div id="n-gas" class="n-ga">
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <!-- Corredor-2 -->
+  <ins class="adsbygoogle"
+       style="display:block"
+       data-ad-client="ca-pub-6475907504235292"
+       data-ad-slot="6561398228"
+       data-ad-format="auto"></ins>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
+  
+  <a href="//www.blogmura.com/ranking.html"><img src="//www.blogmura.com/img/www88_31_3.gif" width="88" height="31" alt="ブログランキング・にほんブログ村へ"></a>
 </div>
