--- a/src/html/CorredorSidebarSponsoredLink.html
+++ b/src/html/CorredorSidebarSponsoredLink.html
@@ -1,4 +1,4 @@
-<div id="n-gas" class="n-ga">
+<p id="n-gas" class="n-ga">
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <!-- Corredor-2 -->
   <ins class="adsbygoogle"
@@ -9,6 +9,7 @@
   <script>
     (adsbygoogle = window.adsbygoogle || []).push({});
   </script>
-  
+</p>
+<p class="banner">
   <a href="//www.blogmura.com/ranking.html"><img src="//www.blogmura.com/img/www88_31_3.gif" width="88" height="31" alt="ブログランキング・にほんブログ村へ"></a>
-</div>
+</p>
