--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ja">
   <head>
     <meta charset="UTF-8">
@@ -30,6 +30,10 @@
           <p>Uglify をラップしている Gulp プラグインで、JavaScript を圧縮しています。</p>
         </section>
         <section>
+          <h2>node-sass</h2>
+          <p>SCSS を圧縮しています。</p>
+        </section>
+        <section>
           <h2>Author</h2>
           <p><a href="http://neo.s21.xrea.com/">Neo</a> (<a href="https://twitter.com/neos21">@Neos21</a>)</p>
           <ul>
@@ -50,7 +54,7 @@
       </section>
     </main>
     <footer id="footer">
-      <div id="copyright"><small>Copyright &copy; 2016-2017 <a href="../index.html">Neo</a>, All rights reserved.</small></div>
+      <div id="copyright"><small>Copyright &copy; 2016-2018 <a href="../index.html">Neo</a>, All rights reserved.</small></div>
     </footer>
   </body>
 </html>
