--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <h2>Author</h2>
           <p><a href="http://neo.s21.xrea.com/">Neo</a> (<a href="https://twitter.com/neos21">@Neos21</a>)</p>
           <ul>
-            <li><a href="https://neos21github.github.io/HatenaBlogs/">GitHub Pages - Hatena Blogs</a></li>
+            <li><a href="https://neos21.github.io/HatenaBlogs/">GitHub Pages - Hatena Blogs</a></li>
           </ul>
         </section>
         <section>
@@ -48,7 +48,7 @@
             <li><a href="http://neos21.hatenablog.jp/">Murga</a></li>
             <li><a href="http://neos21.hateblo.jp/">El Mylar</a></li>
             <li><a href="http://bit-archer.hatenablog.com/">Bit-Archer</a></li>
-            <li><a href="https://github.com/Neos21GitHub/">GitHub - Neos21GitHub</a></li>
+            <li><a href="https://github.com/Neos21/">GitHub - Neos21</a></li>
           </ul>
         </section>
       </section>
