--- a/src/html/MurgaFooter.html
+++ b/src/html/MurgaFooter.html
@@ -1,6 +1,6 @@
 <ul id="neos21-footer-link">
   <li><a href="http://neo.s21.xrea.com/">Neo's World</a></li>
-  <li><a href="https://github.com/Neos21GitHub/">GitHub</a></li>
+  <li><a href="https://github.com/Neos21/">GitHub</a></li>
   <li><a href="http://neos21.hatenablog.com/">Corredor</a></li>
   <li><a href="http://neos21.hateblo.jp/">El Mylar</a></li>
   <li><a href="http://bit-archer.hatenablog.com/">Bit-Archer</a></li>
