--- a/src/html/MurgaSidebarSponsoredLink.html
+++ b/src/html/MurgaSidebarSponsoredLink.html
@@ -1,12 +1,15 @@
-<div id="neos21-adsense-side">
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- Murga-2 -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-6475907504235292"
-     data-ad-slot="6421797422"
-     data-ad-format="auto"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</div>
+<p id="n-gas" class="n-ga">
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <!-- Murga-2 -->
+  <ins class="adsbygoogle"
+       style="display:block"
+       data-ad-client="ca-pub-6475907504235292"
+       data-ad-slot="6421797422"
+       data-ad-format="auto"></ins>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
+</p>
+<p class="banner">
+  <a href="//www.blogmura.com/ranking.html"><img src="//www.blogmura.com/img/www88_31_3.gif" width="88" height="31" alt="ブログランキング・にほんブログ村へ"></a>
+</p>
