--- a/src/html/ElMylarSidebarProfile.html
+++ b/src/html/ElMylarSidebarProfile.html
@@ -1,4 +1,4 @@
-<a href="/about" class="hatena-id-link">Neo</a> <i class="blog-type-pro"></i>
+<a href="/about" class="hatena-id-link">Neo</a> <i class="badge-type-pro"></i>
 映画・音楽作品の感想とか。
 <ul class="n-f">
   <li class="n-f-ha"><a href="http://blog.hatena.ne.jp/neos21/neos21.hateblo.jp/subscribe" target="_blank"><i class="blogicon-hatenablog"></i><span>はてな</span></a></li>
