--- a/src/html/MurgaSidebarProfile.html
+++ b/src/html/MurgaSidebarProfile.html
@@ -1,4 +1,4 @@
-<a href="/about" class="hatena-id-link">Neo</a> <i class="blog-type-pro"></i>
+<a href="/about" class="hatena-id-link">Neo</a> <i class="badge-type-pro"></i>
 個人的に言いたいコト・主張・気持ち。
 <ul class="n-f">
   <li class="n-f-ha"><a href="http://blog.hatena.ne.jp/neos21/neos21.hatenablog.jp/subscribe" target="_blank"><i class="blogicon-hatenablog"></i><span>はてな</span></a></li>
