Modify AdSense Format to Rectangle

--- a/src/html/ElMylarHeader.html
+++ b/src/html/ElMylarHeader.html
@@ -4,7 +4,7 @@
      style="display:block"
      data-ad-client="ca-pub-6475907504235292"
      data-ad-slot="8709663421"
-     data-ad-format="auto"></ins>
+     data-ad-format="rectangle"></ins>
 <script>
   (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
