--- a/src/html/MurgaFooter.html
+++ b/src/html/MurgaFooter.html
@@ -12,7 +12,7 @@
        style="display:block"
        data-ad-client="ca-pub-6475907504235292"
        data-ad-slot="7898530629"
-       data-ad-format="auto"></ins>
+       data-ad-format="rectangle"></ins>
   <script>
     (adsbygoogle = window.adsbygoogle || []).push({});
   </script>
