--- a/src/html/CorredorHeader.html
+++ b/src/html/CorredorHeader.html
@@ -8,7 +8,7 @@
      style="display:block"
      data-ad-client="ca-pub-6475907504235292"
      data-ad-slot="2862253028"
-     data-ad-format="auto"></ins>
+     data-ad-format="rectangle"></ins>
 <script>
   (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
