--- a/src/html/CorredorSidebarSponsoredLink.html
+++ b/src/html/CorredorSidebarSponsoredLink.html
@@ -5,7 +5,7 @@
        style="display:block"
        data-ad-client="ca-pub-6475907504235292"
        data-ad-slot="6561398228"
-       data-ad-format="auto"></ins>
+       data-ad-format="rectangle"></ins>
   <script>
     (adsbygoogle = window.adsbygoogle || []).push({});
   </script>
