--- a/src/html/MurgaHeader.html
+++ b/src/html/MurgaHeader.html
@@ -4,7 +4,7 @@
      style="display:block"
      data-ad-client="ca-pub-6475907504235292"
      data-ad-slot="4000262225"
-     data-ad-format="auto"></ins>
+     data-ad-format="rectangle"></ins>
 <script>
   (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
