Create New Bit-Archer Style

--- a/src/html/BitArcherFooter.html
+++ b/src/html/BitArcherFooter.html
@@ -1,18 +1,18 @@
-<div class="banner banner-footer">
+<div class="banner">
   <!-- Banner -->
 </div>
-<ul id="neos21-footer-link">
+<ul id="n-fl">
   <li><a href="http://neo.s21.xrea.com/">Neo's World</a></li>
   <li><a href="https://github.com/Neos21/">GitHub</a></li>
   <li><a href="http://neos21.hatenablog.com/">Corredor</a></li>
   <li><a href="http://neos21.hateblo.jp/">El Mylar</a></li>
   <li><a href="http://neos21.hatenablog.jp/">Murga</a></li>
 </ul>
-<div id="neos21-template">
-  <ul class="neos21-share" id="neos21-share-template">
-    <li class="neos21-share-hatebu"><a class="neos21-share-hatebu-link" target="_blank"><i class="blogicon-bookmark"></i><span>Bookmark</span></a></li>
-    <li class="neos21-share-twitter"><a class="neos21-share-twitter-link" target="_blank"><i class="blogicon-twitter"></i><span>Twitter</span></a></li>
-    <li class="neos21-share-facebook"><a class="neos21-share-facebook-link" target="_blank"><i class="blogicon-facebook"></i><span>Facebook</span></a></li>
-    <li class="neos21-share-pocket"><a class="neos21-share-pocket-link" target="_blank"><i class="blogicon-chevron-down"></i><span>Pocket</span></a></li>
+<div id="n-stw">
+  <ul class="n-s" id="n-st">
+    <li class="n-s-ha"><a class="n-s-ha-l" target="_blank"><i class="blogicon-bookmark"></i><span>Bookmark</span></a></li>
+    <li class="n-s-tw"><a class="n-s-tw-l" target="_blank"><i class="blogicon-twitter"></i><span>Twitter</span></a></li>
+    <li class="n-s-fb"><a class="n-s-fb-l" target="_blank"><i class="blogicon-facebook"></i><span>Facebook</span></a></li>
+    <li class="n-s-po"><a class="n-s-po-l" target="_blank"><i class="blogicon-chevron-down"></i><span>Pocket</span></a></li>
   </ul>
 </div>
