--- a/src/html/BitArcherSidebarProfile.html
+++ b/src/html/BitArcherSidebarProfile.html
@@ -1,9 +1,9 @@
-<a href="/about" class="hatena-id-link">Neo</a> <i class="blog-sprite-pro"></i>
-お小遣い稼ぎ関連の体験記。
-<ul class="neos21-follow">
-  <li class="neos21-follow-hatena"><a href="http://blog.hatena.ne.jp/neos21/bit-archer.hatenablog.com/subscribe" target="_blank"><i class="blogicon-hatenablog"></i><span>はてな</span></a></li>
-  <li class="neos21-follow-feedly"><a href="http://feedly.com/i/subscription/feed/http://bit-archer.hatenablog.com/feed" target="_blank"><i class="blogicon-rss"></i><span>Feedly</span></a></li>
-  <li class="neos21-follow-twitter"><a href="https://twitter.com/intent/follow?screen_name=Neos21" target="_blank"><i class="blogicon-twitter"></i><span>Twitter</span></a></li>
-  <li class="neos21-follow-facebook"><a href="https://www.facebook.com/Neos21" target="_blank"><i class="blogicon-facebook"></i><span>Facebook</span></a></li>
-  <li class="neos21-follow-instagram"><a href="https://www.instagram.com/Neos21/" target="_blank"><i class="blogicon-instagram"></i><span>Instagram</span></a></li>
+<a href="/about" class="hatena-id-link">Neo</a> <i class="blog-type-pro"></i>
+サブサブブログ。
+<ul class="n-f">
+  <li class="n-f-ha"><a href="http://blog.hatena.ne.jp/neos21/bit-archer.hatenablog.com/subscribe" target="_blank"><i class="blogicon-hatenablog"></i><span>はてな</span></a></li>
+  <li class="n-f-fe"><a href="http://feedly.com/i/subscription/feed/http://bit-archer.hatenablog.com/feed" target="_blank"><i class="blogicon-rss"></i><span>Feedly</span></a></li>
+  <li class="n-f-tw"><a href="https://twitter.com/intent/follow?screen_name=Neos21" target="_blank"><i class="blogicon-twitter"></i></a></li>
+  <li class="n-f-fb"><a href="https://www.facebook.com/Neos21" target="_blank"><i class="blogicon-facebook"></i></a></li>
+  <li class="n-f-ig"><a href="https://www.instagram.com/Neos21/" target="_blank"><i class="blogicon-instagram"></i></a></li>
 </ul>
