--- a/src/html/CorredorSidebarProfile.html
+++ b/src/html/CorredorSidebarProfile.html
@@ -1,5 +1,9 @@
 <a href="/about" class="hatena-id-link">Neo</a> <i class="badge-type-pro"></i>
 ウェブ・プログラミングの勉強メモ。
+<ul class="n-pl">
+  <li><strong><a href="https://neos21.github.io/sell-campaign.html" target="_blank"><i class="blogicon-good"></i> 色々売ります</a></strong></li>
+  <li><em><a href="https://amzn.to/2wcjVoM" target="_blank"><i class="blogicon-amazon"></i> 欲しいものリスト</a></em></li>
+</ul>
 <ul class="n-f">
   <li class="n-f-ha"><a href="http://blog.hatena.ne.jp/neos21/neos21.hatenablog.com/subscribe" target="_blank"><i class="blogicon-hatenablog"></i><span>はてな</span></a></li>
   <li class="n-f-fe"><a href="http://feedly.com/i/subscription/feed/http://neos21.hatenablog.com/feed" target="_blank"><i class="blogicon-rss"></i><span>Feedly</span></a></li>
