--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </ul>
         <section>
           <h2>Author</h2>
-          <p><a href="http://neo.s21.xrea.com/">Neo</a> (<a href="https://twitter.com/neos21">@Neos21</a>)</p>
+          <p><a href="http://neo.s21.xrea.com/">Neo</a> (<a href="https://twitter.com/Neos21">@Neos21</a>)</p>
           <ul>
             <li><a href="https://neos21.github.io/HatenaBlogs/">GitHub Pages - Hatena Blogs</a></li>
           </ul>
