--- a/src/html/MurgaHeader.html
+++ b/src/html/MurgaHeader.html
@@ -1,3 +1,7 @@
+<div id="n-hm">
+  <a href="#" onclick="$('html,body').animate({scrollTop:$('.hatena-module-category').offset().top});return false;" title="カテゴリメニューに移動する"><i class="blogicon-reorder"></i></a>
+</div>
+
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Murga-1 -->
 <ins class="adsbygoogle"
