Add BitArcherHeader Link

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             <ul>
               <li><a href="./dist/styles/BitArcher.css">BitArcher.css</a> (Source : <a href="./src/styles/BitArcher.scss">BitArcher.scss</a>)</li>
               <li><a href="./dist/scripts/BitArcher.css">BitArcher.js</a> (Source : <a href="./src/scripts/BitArcher.js">BitArcher.js</a>)</li>
+              <li><a href="./src/html/BitArcherHeader.html">BitArcherHeader.html</a></li>
               <li><a href="./src/html/BitArcherEntryFooter.html">BitArcherEntryFooter.html</a></li>
               <li><a href="./src/html/BitArcherSidebarProfile.html">BitArcherSidebarProfile.html</a></li>
               <li><a href="./src/html/BitArcherFooter.html">BitArcherFooter.html</a></li>
