Add Fallback Scripts to Corredor

--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
           <dd>
             <ul>
               <li><a href="./dist/styles/Corredor.css">Corredor.css</a> (Source : <a href="./src/styles/Corredor.scss">Corredor.scss</a>)</li>
-              <li><a href="./dist/scripts/Corredor.css">Corredor.js</a> (Source : <a href="./src/scripts/Corredor.js">Corredor.js</a>)</li>
+              <li><a href="./dist/scripts/Corredor.js">Corredor.js</a> (Source : <a href="./src/scripts/Corredor.js">Corredor.js</a>)</li>
+              <li><a href="./dist/scripts/CorredorCheck.js">CorredorCheck.js</a> (Source : <a href="./src/scripts/Corredor.js">CorredorCheck.js</a>)</li>
               <li><a href="./src/images/Corredor.jpg">Corredor.jpg</a></li>
-              <li><a href="./src/html/CorredorHead.html">CorredorHead.html</a></li>
+              <li><a href="./src/html/CorredorHead.html">CorredorHead.html</a> (Included <code>CorredorCheck.js</code>)</li>
               <li><a href="./src/html/CorredorHeader.html">CorredorHeader.html</a></li>
               <li><a href="./src/html/CorredorEntryFooter.html">CorredorEntryFooter.html</a></li>
               <li><a href="./src/html/CorredorSidebarProfile.html">CorredorSidebarProfile.html</a></li>
@@ -37,7 +38,7 @@
           <dd>
             <ul>
               <li><a href="./dist/styles/Murga.css">Murga.css</a> (Source : <a href="./src/styles/Murga.scss">Murga.scss</a>)</li>
-              <li><a href="./dist/scripts/Murga.css">Murga.js</a> (Source : <a href="./src/scripts/Murga.js">Murga.js</a>)</li>
+              <li><a href="./dist/scripts/Murga.js">Murga.js</a> (Source : <a href="./src/scripts/Murga.js">Murga.js</a>)</li>
               <li><a href="./src/images/Murga.jpg">Murga.jpg</a></li>
               <li><a href="./src/html/MurgaHead.html">MurgaHead.html</a></li>
               <li><a href="./src/html/MurgaHeader.html">MurgaHeader.html</a></li>
@@ -51,7 +52,7 @@
           <dd>
             <ul>
               <li><a href="./dist/styles/ElMylar.css">ElMylar.css</a> (Source : <a href="./src/styles/ElMylar.scss">ElMylar.scss</a>)</li>
-              <li><a href="./dist/scripts/ElMylar.css">ElMylar.js</a> (Source : <a href="./src/scripts/ElMylar.js">ElMylar.js</a>)</li>
+              <li><a href="./dist/scripts/ElMylar.js">ElMylar.js</a> (Source : <a href="./src/scripts/ElMylar.js">ElMylar.js</a>)</li>
               <li><a href="./src/images/ElMylar.jpg">ElMylar.jpg</a></li>
               <li><a href="./src/html/ElMylarHead.html">ElMylarHead.html</a></li>
               <li><a href="./src/html/ElMylarHeader.html">ElMylarHeader.html</a></li>
