--- a/src/html/CorredorFooter.html
+++ b/src/html/CorredorFooter.html
@@ -25,3 +25,4 @@
     <li class="n-s-po"><a class="n-s-po-l" target="_blank"><i class="blogicon-chevron-down"></i><span>Pocket</span></a></li>
   </ul>
 </div>
+<span id="n-check"></span>
