--- a/index.html
+++ b/index.html
@@ -80,6 +80,13 @@
           <ul>
             <li><a href="https://github.com/Neos21/HatenaBlogs">GitHub - HatenaBlogs</a></li>
             <li><a href="https://neos21.github.io/HatenaBlogs/">GitHub Pages - Hatena Blogs</a></li>
+            <li>
+              <a href="https://www.npmjs.com/package/@neos21/hatena-blogs">npm - @neos21/hatena-blogs</a>
+              <ul>
+                <li><a href="https://unpkg.com/@neos21/hatena-blogs/">unpkg</a></li>
+                <li><a href="https://www.jsdelivr.com/package/npm/@neos21/hatena-blogs">jsDelivr</a></li>
+              </ul>
+            </li>
           </ul>
         </section>
         <section>
