--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <li><a href="https://github.com/Neos21/HatenaBlogs">GitHub - HatenaBlogs</a></li>
             <li><a href="https://neos21.github.io/HatenaBlogs/">GitHub Pages - Hatena Blogs</a></li>
             <li>
-              <a href="https://www.npmjs.com/package/@neos21/hatena-blogs">npm - @neos21/hatena-blogs</a>
+              <a href="https://www.npmjs.com/package/@neos21/hatena-blogs">npm - @neos21/hatena-blogs <img src="https://img.shields.io/npm/v/@neos21/hatena-blogs.svg" alt="NPM Version" title="NPM Version"></a>
               <ul>
                 <li><a href="https://unpkg.com/@neos21/hatena-blogs/">unpkg</a></li>
                 <li><a href="https://www.jsdelivr.com/package/npm/@neos21/hatena-blogs">jsDelivr</a></li>
