--- a/src/html/ElMylarSidebarProfile.html
+++ b/src/html/ElMylarSidebarProfile.html
@@ -1,9 +1,6 @@
 <a href="/about" class="hatena-id-link">Neo</a> <i class="badge-type-pro"></i>
 映画・音楽作品の感想とか。
-<ul class="n-pl">
-  <li><strong><a href="https://neos21.github.io/sell-campaign.html" target="_blank"><i class="blogicon-good"></i> 色々売ります</a></strong></li>
-  <li><em><a href="https://amzn.to/2wcjVoM" target="_blank"><i class="blogicon-amazon"></i> 欲しいものリスト</a></em></li>
-</ul>
+<p class="n-pl"><em><a href="https://amzn.to/2wcjVoM" target="_blank"><i class="blogicon-amazon"></i> 欲しいものリスト</a></em></p>
 <ul class="n-f">
   <li class="n-f-ha"><a href="http://blog.hatena.ne.jp/neos21/neos21.hateblo.jp/subscribe" target="_blank"><i class="blogicon-hatenablog"></i><span>はてな</span></a></li>
   <li class="n-f-fe"><a href="http://feedly.com/i/subscription/feed/http://neos21.hateblo.jp/feed" target="_blank"><i class="blogicon-rss"></i><span>Feedly</span></a></li>
