--- a/index.html
+++ b/index.html
@@ -62,17 +62,6 @@
               <li><a href="./src/html/ElMylarFooter.html">ElMylarFooter.html</a></li>
             </ul>
           </dd>
-          <dt><a href="http://bit-archer.hatenablog.com/">Bit-Archer</a></dt>
-          <dd>
-            <ul>
-              <li><a href="./dist/styles/BitArcher.css">BitArcher.css</a> (Source : <a href="./src/styles/BitArcher.scss">BitArcher.scss</a>)</li>
-              <li><a href="./dist/scripts/BitArcher.js">BitArcher.js</a> (Source : <a href="./src/scripts/BitArcher.js">BitArcher.js</a>)</li>
-              <li><a href="./src/html/BitArcherHeader.html">BitArcherHeader.html</a></li>
-              <li><a href="./src/html/BitArcherEntryFooter.html">BitArcherEntryFooter.html</a></li>
-              <li><a href="./src/html/BitArcherSidebarProfile.html">BitArcherSidebarProfile.html</a></li>
-              <li><a href="./src/html/BitArcherFooter.html">BitArcherFooter.html</a></li>
-            </ul>
-          </dd>
         </dl>
         <section>
           <h2>Author</h2>
@@ -96,14 +85,14 @@
             <li><a href="http://neos21.hatenablog.com/">Corredor</a></li>
             <li><a href="http://neos21.hatenablog.jp/">Murga</a></li>
             <li><a href="http://neos21.hateblo.jp/">El Mylar</a></li>
-            <li><a href="http://bit-archer.hatenablog.com/">Bit-Archer</a></li>
+            <li><a href="http://neos21.github.io/">Neo's GitHub Pages</a></li>
             <li><a href="https://github.com/Neos21/">GitHub - Neos21</a></li>
           </ul>
         </section>
       </section>
     </main>
     <footer id="footer">
-      <div id="copyright"><small>Copyright &copy; 2016-2018 <a href="../index.html">Neo</a>, All rights reserved.</small></div>
+      <div id="copyright"><small>Copyright &copy; 2016-2019 <a href="../index.html">Neo</a>, All rights reserved.</small></div>
     </footer>
   </body>
 </html>
