--- a/src/html/CorredorFooter.html
+++ b/src/html/CorredorFooter.html
@@ -3,7 +3,7 @@
   <li><a href="https://github.com/Neos21/">GitHub</a></li>
   <li><a href="http://neos21.hatenablog.jp/">Murga</a></li>
   <li><a href="http://neos21.hateblo.jp/">El Mylar</a></li>
-  <li><a href="http://bit-archer.hatenablog.com/">Bit-Archer</a></li>
+  <li><a href="http://neos21.github.io/">Neo's GitHub Pages</a></li>
 </ul>
 <div id="n-gaf" class="n-ga">
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
