--- a/src/html/ElMylarHead.html
+++ b/src/html/ElMylarHead.html
@@ -1,5 +1,10 @@
-<link rel="stylesheet" href="//neos21.github.io/HatenaBlogs/dist/styles/ElMylar.css">
-<script src="//neos21.github.io/HatenaBlogs/dist/scripts/ElMylar.js"></script>
+<!-- ElMylar Check -->
+<script>
+  Neos21={append:function(t,s,e){var a=document,n="setAttribute",l="Neos21."+(t?"styles":"scripts")+"("+s+");",r=a.createElement(t?"link":"script");t&&r[n]("rel","stylesheet"),r[n](t?"href":"src",e),r[n]("onload",l),r[n]("onerror",l),a.querySelector("head").appendChild(r)},styles:function(t){if("number"==typeof t){var s=window,e=document;if(e.readyState&&"interactive"!==e.readyState)if("loading"!==e.readyState){var a=["https://unpkg.com/@neos21/hatena-blogs@1.0.7/dist/styles/ElMylar.css","https://cdn.jsdelivr.net/gh/Neos21/hatena-blogs@latest/dist/styles/ElMylar.css","https://cdn.jsdelivr.net/npm/@neos21/hatena-blogs@1.0.7/dist/styles/ElMylar.css","https://raw.githack.com/Neos21/hatena-blogs/master/dist/styles/ElMylar.css","https://raw.githubusercontent.com/Neos21/hatena-blogs/master/dist/styles/ElMylar.css"],n=e.getElementById("n-check");if(n)if(0!==parseInt(s.getComputedStyle(n).fontSize)){var l=t+1;a.length<=l||Neos21.append(!0,l,a[l])}}else e.addEventListener("DOMContentLoaded",function(){Neos21.styles(t)});else s.addEventListener("load",function(){Neos21.styles(t)})}},scripts:function(t){if("number"==typeof t){var s=["https://unpkg.com/@neos21/hatena-blogs@1.0.7/dist/scripts/ElMylar.js","https://cdn.jsdelivr.net/gh/Neos21/hatena-blogs@latest/dist/scripts/ElMylar.js","https://cdn.jsdelivr.net/npm/@neos21/hatena-blogs@1.0.7/dist/scripts/ElMylar.js","https://raw.githack.com/Neos21/hatena-blogs/master/dist/scripts/ElMylar.js","https://raw.githubusercontent.com/Neos21/hatena-blogs/master/dist/scripts/ElMylar.js"];if(!Neos21.scriptLoaded){var e=t+1;s.length<=e||Neos21.append(!1,e,s[e])}}}};
+</script>
+
+<link rel="stylesheet" href="https://neos21.github.io/hatena-blogs/dist/styles/ElMylar.css" onload="Neos21.styles(-1);" onerror="Neos21.styles(-1);">
+<script src="https://neos21.github.io/hatena-blogs/dist/scripts/ElMylar.js" onload="Neos21.scripts(-1);" onerror="Neos21.scripts(-1);"></script>
 
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script>
