--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <ul>
               <li><a href="./dist/styles/Corredor.css">Corredor.css</a> (Source : <a href="./src/styles/Corredor.scss">Corredor.scss</a>)</li>
               <li><a href="./dist/scripts/Corredor.js">Corredor.js</a> (Source : <a href="./src/scripts/Corredor.js">Corredor.js</a>)</li>
-              <li><a href="./dist/scripts/CorredorCheck.js">CorredorCheck.js</a> (Source : <a href="./src/scripts/Corredor.js">CorredorCheck.js</a>)</li>
+              <li><a href="./dist/scripts/CorredorCheck.js">CorredorCheck.js</a> (Source : <a href="./src/scripts/CorredorCheck.js">CorredorCheck.js</a>)</li>
               <li><a href="./src/images/Corredor.jpg">Corredor.jpg</a></li>
               <li><a href="./src/html/CorredorHead.html">CorredorHead.html</a> (Included <code>CorredorCheck.js</code>)</li>
               <li><a href="./src/html/CorredorHeader.html">CorredorHeader.html</a></li>
@@ -39,6 +39,7 @@
             <ul>
               <li><a href="./dist/styles/Murga.css">Murga.css</a> (Source : <a href="./src/styles/Murga.scss">Murga.scss</a>)</li>
               <li><a href="./dist/scripts/Murga.js">Murga.js</a> (Source : <a href="./src/scripts/Murga.js">Murga.js</a>)</li>
+              <li><a href="./dist/scripts/MurgaCheck.js">MurgaCheck.js</a> (Source : <a href="./src/scripts/MurgaCheck.js">MurgaCheck.js</a>)</li>
               <li><a href="./src/images/Murga.jpg">Murga.jpg</a></li>
               <li><a href="./src/html/MurgaHead.html">MurgaHead.html</a></li>
               <li><a href="./src/html/MurgaHeader.html">MurgaHeader.html</a></li>
@@ -53,6 +54,7 @@
             <ul>
               <li><a href="./dist/styles/ElMylar.css">ElMylar.css</a> (Source : <a href="./src/styles/ElMylar.scss">ElMylar.scss</a>)</li>
               <li><a href="./dist/scripts/ElMylar.js">ElMylar.js</a> (Source : <a href="./src/scripts/ElMylar.js">ElMylar.js</a>)</li>
+              <li><a href="./dist/scripts/ElMylarCheck.js">ElMylarCheck.js</a> (Source : <a href="./src/scripts/ElMylarCheck.js">ElMylarCheck.js</a>)</li>
               <li><a href="./src/images/ElMylar.jpg">ElMylar.jpg</a></li>
               <li><a href="./src/html/ElMylarHead.html">ElMylarHead.html</a></li>
               <li><a href="./src/html/ElMylarHeader.html">ElMylarHeader.html</a></li>
@@ -67,8 +69,8 @@
           <h2>Author</h2>
           <p><a href="http://neo.s21.xrea.com/">Neo</a> (<a href="https://twitter.com/Neos21">@Neos21</a>)</p>
           <ul>
-            <li><a href="https://github.com/Neos21/HatenaBlogs">GitHub - HatenaBlogs</a></li>
-            <li><a href="https://neos21.github.io/HatenaBlogs/">GitHub Pages - Hatena Blogs</a></li>
+            <li><a href="https://github.com/Neos21/hatena-blogs">GitHub - hatena-blogs</a></li>
+            <li><a href="https://neos21.github.io/hatena-blogs/">GitHub Pages - Hatena Blogs</a></li>
             <li>
               <a href="https://www.npmjs.com/package/@neos21/hatena-blogs">npm - @neos21/hatena-blogs <img src="https://img.shields.io/npm/v/@neos21/hatena-blogs.svg" alt="NPM Version" title="NPM Version"></a>
               <ul>
