[WIP] Corredor 直せた

--- a/src/html/CorredorFooter.html
+++ b/src/html/CorredorFooter.html
@@ -7,14 +7,8 @@
 <div id="n-gaf" class="n-ga">
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <!-- Corredor-3 -->
-  <ins class="adsbygoogle"
-       style="display:block"
-       data-ad-client="ca-pub-6475907504235292"
-       data-ad-slot="8038131424"
-       data-ad-format="rectangle"></ins>
-  <script>
-    (adsbygoogle = window.adsbygoogle || []).push({});
-  </script>
+  <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-6475907504235292" data-ad-slot="8038131424" data-ad-format="rectangle"></ins>
+  <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
 </div>
 <div id="n-stw">
   <ul class="n-s" id="n-st">
