[WIP] Murga・El Mylar も対応

--- a/src/html/MurgaFooter.html
+++ b/src/html/MurgaFooter.html
@@ -1,6 +1,5 @@
 <ul id="n-fl">
   <li><a href="http://neo.s21.xrea.com/">Neo's World</a></li>
-  <li><a href="https://github.com/Neos21/">GitHub</a></li>
   <li><a href="http://neos21.hatenablog.com/">Corredor</a></li>
   <li><a href="http://neos21.hateblo.jp/">El Mylar</a></li>
   <li><a href="http://neos21.github.io/">Neo's GitHub Pages</a></li>
@@ -8,14 +7,8 @@
 <div id="n-gaf" class="n-ga">
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <!-- Murga-3 -->
-  <ins class="adsbygoogle"
-       style="display:block"
-       data-ad-client="ca-pub-6475907504235292"
-       data-ad-slot="7898530629"
-       data-ad-format="rectangle"></ins>
-  <script>
-    (adsbygoogle = window.adsbygoogle || []).push({});
-  </script>
+  <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-6475907504235292" data-ad-slot="7898530629" data-ad-format="rectangle"></ins>
+  <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
 </div>
 <div id="n-stw">
   <ul class="n-s" id="n-st">
@@ -26,3 +19,9 @@
   </ul>
 </div>
 <span id="n-check"></span>
+
+
+
+<!--
+  - .n-s > li > a に振ってある class は JavaScript で操作する際に使用しているので消さないこと
+-->
