--- a/src/html/ElMylarSidebarProfile.html
+++ b/src/html/ElMylarSidebarProfile.html
@@ -1,10 +1,16 @@
-<a href="/about" class="hatena-id-link">Neo</a> <i class="badge-type-pro"></i>
+<a href="/about" class="hatena-id-link">Neo</a>
 映画・音楽作品の感想とか。
-<p class="n-pl"><em><a href="https://amzn.to/2wcjVoM" target="_blank"><i class="blogicon-amazon"></i> 欲しいものリスト</a></em></p>
+<div class="n-pl"><ul><li><a href="http://neo.s21.xrea.com/">Neo's World</a></li><li><a href="http://neos21.hatenablog.com/">Corredor</a></li><li><a href="http://neos21.hatenablog.jp/">Murga</a></li><li><a href="http://neos21.github.io/">Neo's GitHub Pages</a></li><li><a href="https://github.com/Neos21">GitHub</a></li><li><a href="https://www.npmjs.com/~neos21">npm</a></li></ul><ul><li><a href="https://amzn.to/2wcjVoM">Amazon Whishlist</a></li><li><a href="https://github.com/sponsors/Neos21">GitHub Sponsors</a></li><li><a href="https://www.patreon.com/Neos21">Patreon</a></li><li><a href="https://fantia.jp/Neos21">Fantia</a></li><li><a href="https://enty.jp/Neos21">Enty</a></li><li><a href="https://profile.coconala.com/users/1578422">Coconala</a></li></ul></div>
 <ul class="n-f">
-  <li class="n-f-ha"><a href="http://blog.hatena.ne.jp/neos21/neos21.hateblo.jp/subscribe" target="_blank"><i class="blogicon-hatenablog"></i><span>はてな</span></a></li>
-  <li class="n-f-fe"><a href="http://feedly.com/i/subscription/feed/http://neos21.hateblo.jp/feed" target="_blank"><i class="blogicon-rss"></i><span>Feedly</span></a></li>
-  <li class="n-f-tw"><a href="https://twitter.com/intent/follow?screen_name=Neos21" target="_blank"><i class="blogicon-twitter"></i></a></li>
-  <li class="n-f-fb"><a href="https://www.facebook.com/Neos21" target="_blank"><i class="blogicon-facebook"></i></a></li>
-  <li class="n-f-ig"><a href="https://www.instagram.com/Neos21/" target="_blank"><i class="blogicon-instagram"></i></a></li>
+  <li class="n-f-ha"><a href="http://blog.hatena.ne.jp/neos21/neos21.hateblo.jp/subscribe"><i class="blogicon-hatenablog"></i><span>Hatena</span></a></li>
+  <li class="n-f-fe"><a href="http://feedly.com/i/subscription/feed/http://neos21.hateblo.jp/feed"><i class="blogicon-rss"></i><span>Feedly</span></a></li>
+  <li class="n-f-tw"><a href="https://twitter.com/intent/follow?screen_name=Neos21"><i class="blogicon-twitter"></i></a></li>
+  <li class="n-f-fb"><a href="https://www.facebook.com/Neos21"><i class="blogicon-facebook"></i></a></li>
+  <li class="n-f-ig"><a href="https://www.instagram.com/Neos21/"><i class="blogicon-instagram"></i></a></li>
 </ul>
+
+
+
+<!--
+  - .n-pl は br 要素が自動挿入されて Grid が崩れるため1行にしている
+-->
