--- a/src/html/MurgaHeader.html
+++ b/src/html/MurgaHeader.html
@@ -1,14 +1,5 @@
-<div id="n-hm">
-  <a href="#" onclick="$('html,body').animate({scrollTop:$('.hatena-module-category').offset().top});return false;" title="カテゴリメニューに移動する"><i class="blogicon-reorder"></i></a>
-</div>
-
+<div id="n-hm"><a href="#" onclick="$('html,body').animate({scrollTop:$('.hatena-module-category').offset().top});return false;" title="カテゴリメニューに移動する"><i class="blogicon-reorder"></i></a></div>
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Murga-1 -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-6475907504235292"
-     data-ad-slot="4000262225"
-     data-ad-format="rectangle"></ins>
-<script>
-  (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-6475907504235292" data-ad-slot="4000262225" data-ad-format="rectangle"></ins>
+<script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
