--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </dl>
         <section>
           <h2>Author</h2>
-          <p><a href="http://neo.s21.xrea.com/">Neo</a> (<a href="https://twitter.com/Neos21">@Neos21</a>)</p>
+          <p><a href="http://neo.s21.xrea.com/">Neo</a></p>
           <ul>
             <li><a href="https://github.com/Neos21/hatena-blogs">GitHub - hatena-blogs</a></li>
             <li><a href="https://neos21.github.io/hatena-blogs/">GitHub Pages - Hatena Blogs</a></li>
