--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1>Hatena Blogs</h1>
         <p>自分が運営しているはてなブログのテーマやカスタム HTML などを保存しておくリポジトリです。</p>
         <dl>
-          <dt><a href="http://neos21.hatenablog.com/">Corredor</a></dt>
+          <dt><a href="https://neos21.hatenablog.com/">Corredor</a></dt>
           <dd>
             <ul>
               <li><a href="./dist/styles/Corredor.css">Corredor.css</a> (Source : <a href="./src/styles/Corredor.scss">Corredor.scss</a>)</li>
@@ -34,7 +34,7 @@
               <li><a href="./src/html/CorredorFooter.html">CorredorFooter.html</a></li>
             </ul>
           </dd>
-          <dt><a href="http://neos21.hatenablog.jp/">Murga</a></dt>
+          <dt><a href="https://neos21.hatenablog.jp/">Murga</a></dt>
           <dd>
             <ul>
               <li><a href="./dist/styles/Murga.css">Murga.css</a> (Source : <a href="./src/styles/Murga.scss">Murga.scss</a>)</li>
@@ -49,7 +49,7 @@
               <li><a href="./src/html/MurgaFooter.html">MurgaFooter.html</a></li>
             </ul>
           </dd>
-          <dt><a href="http://neos21.hateblo.jp/">El Mylar</a></dt>
+          <dt><a href="https://neos21.hateblo.jp/">El Mylar</a></dt>
           <dd>
             <ul>
               <li><a href="./dist/styles/ElMylar.css">ElMylar.css</a> (Source : <a href="./src/styles/ElMylar.scss">ElMylar.scss</a>)</li>
@@ -84,10 +84,10 @@
           <h2>Links</h2>
           <ul>
             <li><a href="http://neo.s21.xrea.com/">Neo's World</a></li>
-            <li><a href="http://neos21.hatenablog.com/">Corredor</a></li>
-            <li><a href="http://neos21.hatenablog.jp/">Murga</a></li>
-            <li><a href="http://neos21.hateblo.jp/">El Mylar</a></li>
-            <li><a href="http://neos21.github.io/">Neo's GitHub Pages</a></li>
+            <li><a href="https://neos21.hatenablog.com/">Corredor</a></li>
+            <li><a href="https://neos21.hatenablog.jp/">Murga</a></li>
+            <li><a href="https://neos21.hateblo.jp/">El Mylar</a></li>
+            <li><a href="https://neos21.github.io/">Neo's GitHub Pages</a></li>
             <li><a href="https://github.com/Neos21/">GitHub - Neos21</a></li>
           </ul>
         </section>
