--- a/src/html/ElMylarFooter.html
+++ b/src/html/ElMylarFooter.html
@@ -1,8 +1,8 @@
 <ul id="n-fl">
   <li><a href="http://neo.s21.xrea.com/">Neo's World</a></li>
-  <li><a href="http://neos21.hatenablog.com/">Corredor</a></li>
-  <li><a href="http://neos21.hatenablog.jp/">Murga</a></li>
-  <li><a href="http://neos21.github.io/">Neo's GitHub Pages</a></li>
+  <li><a href="https://neos21.hatenablog.com/">Corredor</a></li>
+  <li><a href="https://neos21.hatenablog.jp/">Murga</a></li>
+  <li><a href="https://neos21.github.io/">Neo's GitHub Pages</a></li>
 </ul>
 <div id="n-gaf" class="n-ga">
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
