--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <main id="main">
       <section>
         <h1>Hatena Blogs</h1>
+        <p>
+          <a href="https://www.npmjs.com/package/@neos21/hatena-blogs"><img src="https://img.shields.io/npm/v/@neos21/hatena-blogs.svg" alt="NPM Version" title="NPM Version"></a>
+          <a href="https://github.com/Neos21/hatena-blogs/packages/327523"><img src="https://img.shields.io/github/package-json/v/neos21/hatena-blogs?label=github" alt="GPR Version" title="GPR Version"></a>
+        </p>
         <p>自分が運営しているはてなブログのテーマやカスタム HTML などを保存しておくリポジトリです。</p>
         <dl>
           <dt><a href="https://neos21.hatenablog.com/">Corredor</a></dt>
