--- a/index.html
+++ b/index.html
@@ -26,46 +26,31 @@
           <dt><a href="https://neos21.hatenablog.com/">Corredor</a></dt>
           <dd>
             <ul>
-              <li><a href="./dist/styles/Corredor.css">Corredor.css</a> (Source : <a href="./src/styles/Corredor.scss">Corredor.scss</a>)</li>
-              <li><a href="./dist/scripts/Corredor.js">Corredor.js</a> (Source : <a href="./src/scripts/Corredor.js">Corredor.js</a>)</li>
-              <li><a href="./dist/scripts/CorredorCheck.js">CorredorCheck.js</a> (Source : <a href="./src/scripts/CorredorCheck.js">CorredorCheck.js</a>)</li>
-              <li><a href="./src/images/Corredor.jpg">Corredor.jpg</a></li>
-              <li><a href="./src/html/CorredorHead.html">CorredorHead.html</a> (Included <code>CorredorCheck.js</code>)</li>
-              <li><a href="./src/html/CorredorHeader.html">CorredorHeader.html</a></li>
-              <li><a href="./src/html/CorredorEntryFooter.html">CorredorEntryFooter.html</a></li>
-              <li><a href="./src/html/CorredorSidebarProfile.html">CorredorSidebarProfile.html</a></li>
-              <li><a href="./src/html/CorredorSidebarSponsoredLink.html">CorredorSidebarSponsoredLink.html</a></li>
-              <li><a href="./src/html/CorredorFooter.html">CorredorFooter.html</a></li>
+              <li><a href="./dist/styles/corredor.css">corredor.css</a> (Source : <a href="./src/styles/corredor.scss">corredor.scss</a>)</li>
+              <li><a href="./src/html/corredor-head.html">corredor-head.html</a></li>
+              <li><a href="./src/html/corredor-header.html">corredor-header.html</a></li>
+              <li><a href="./src/html/corredor-sidebar.html">corredor-sidebar.html</a></li>
+              <li><a href="./src/html/corredor-footer.html">corredor-footer.html</a></li>
             </ul>
           </dd>
           <dt><a href="https://neos21.hatenablog.jp/">Murga</a></dt>
           <dd>
             <ul>
-              <li><a href="./dist/styles/Murga.css">Murga.css</a> (Source : <a href="./src/styles/Murga.scss">Murga.scss</a>)</li>
-              <li><a href="./dist/scripts/Murga.js">Murga.js</a> (Source : <a href="./src/scripts/Murga.js">Murga.js</a>)</li>
-              <li><a href="./dist/scripts/MurgaCheck.js">MurgaCheck.js</a> (Source : <a href="./src/scripts/MurgaCheck.js">MurgaCheck.js</a>)</li>
-              <li><a href="./src/images/Murga.jpg">Murga.jpg</a></li>
-              <li><a href="./src/html/MurgaHead.html">MurgaHead.html</a></li>
-              <li><a href="./src/html/MurgaHeader.html">MurgaHeader.html</a></li>
-              <li><a href="./src/html/MurgaEntryFooter.html">MurgaEntryFooter.html</a></li>
-              <li><a href="./src/html/MurgaSidebarProfile.html">MurgaSidebarProfile.html</a></li>
-              <li><a href="./src/html/MurgaSidebarSponsoredLink.html">MurgaSidebarSponsoredLink.html</a></li>
-              <li><a href="./src/html/MurgaFooter.html">MurgaFooter.html</a></li>
+              <li><a href="./dist/styles/murga.css">murga.css</a> (Source : <a href="./src/styles/murga.scss">murga.scss</a>)</li>
+              <li><a href="./src/html/murga-head.html">murga-head.html</a></li>
+              <li><a href="./src/html/murga-header.html">murga-header.html</a></li>
+              <li><a href="./src/html/murga-sidebar.html">murga-sidebar.html</a></li>
+              <li><a href="./src/html/murga-footer.html">murga-footer.html</a></li>
             </ul>
           </dd>
           <dt><a href="https://neos21.hateblo.jp/">El Mylar</a></dt>
           <dd>
             <ul>
-              <li><a href="./dist/styles/ElMylar.css">ElMylar.css</a> (Source : <a href="./src/styles/ElMylar.scss">ElMylar.scss</a>)</li>
-              <li><a href="./dist/scripts/ElMylar.js">ElMylar.js</a> (Source : <a href="./src/scripts/ElMylar.js">ElMylar.js</a>)</li>
-              <li><a href="./dist/scripts/ElMylarCheck.js">ElMylarCheck.js</a> (Source : <a href="./src/scripts/ElMylarCheck.js">ElMylarCheck.js</a>)</li>
-              <li><a href="./src/images/ElMylar.jpg">ElMylar.jpg</a></li>
-              <li><a href="./src/html/ElMylarHead.html">ElMylarHead.html</a></li>
-              <li><a href="./src/html/ElMylarHeader.html">ElMylarHeader.html</a></li>
-              <li><a href="./src/html/ElMylarEntryFooter.html">ElMylarEntryFooter.html</a></li>
-              <li><a href="./src/html/ElMylarSidebarProfile.html">ElMylarSidebarProfile.html</a></li>
-              <li><a href="./src/html/ElMylarSidebarSponsoredLink.html">ElMylarSidebarSponsoredLink.html</a></li>
-              <li><a href="./src/html/ElMylarFooter.html">ElMylarFooter.html</a></li>
+              <li><a href="./dist/styles/el-mylar.css">el-mylar.css</a> (Source : <a href="./src/styles/el-mylar.scss">el-mylar.scss</a>)</li>
+              <li><a href="./src/html/el-mylar-head.html">el-mylar-head.html</a></li>
+              <li><a href="./src/html/el-mylar-header.html">el-mylar-header.html</a></li>
+              <li><a href="./src/html/el-mylar-sidebar.html">el-mylar-sidebar.html</a></li>
+              <li><a href="./src/html/el-mylar-footer.html">el-mylar-footer.html</a></li>
             </ul>
           </dd>
         </dl>
