--- a/src/html/murga-footer.html
+++ b/src/html/murga-footer.html
@@ -21,7 +21,7 @@
     <li><a href="https://www.instagram.com/Neos21">Instagram</a></li>
   </ul>
   <ul id="footer-links-sponsors">
-    <li><a href="https://amzn.to/2wcjVoM">Amazon Whishlist</a></li>
+    <li><a href="https://amzn.to/2wcjVoM">Amazon Wish List</a></li>
     <li><a href="https://github.com/sponsors/Neos21">GitHub Sponsors</a>
   </li>
     <li><a href="https://www.patreon.com/Neos21">Patreon</a></li>
