--- a/src/html/corredor-head.html
+++ b/src/html/corredor-head.html
@@ -1,3 +1,3 @@
-<!-- <link rel="stylesheet" href="https://neos21.github.io/hatena-blogs/dist/styles/corredor.css"> -->
+<link rel="stylesheet" href="https://neos21.github.io/hatena-blogs/dist/styles/corredor.css">
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script>(adsbygoogle = window.adsbygoogle || []).push({ google_ad_client: "ca-pub-6475907504235292", enable_page_level_ads: true });</script>
