--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </dl>
         <section>
           <h2>Author</h2>
-          <p><a href="http://neo.s21.xrea.com/">Neo</a></p>
+          <p><a href="https://neos21.net/">Neo</a></p>
           <ul>
             <li><a href="https://github.com/Neos21/hatena-blogs">GitHub - hatena-blogs</a></li>
             <li><a href="https://neos21.github.io/hatena-blogs/">GitHub Pages - Hatena Blogs</a></li>
@@ -75,7 +75,7 @@
         <section>
           <h2>Links</h2>
           <ul>
-            <li><a href="http://neo.s21.xrea.com/">Neo's World</a></li>
+            <li><a href="https://neos21.net/">Neo's World</a></li>
             <li><a href="https://neos21.hatenablog.com/">Corredor</a></li>
             <li><a href="https://neos21.hatenablog.jp/">Murga</a></li>
             <li><a href="https://neos21.hateblo.jp/">El Mylar</a></li>
