--- a/src/html/corredor-footer.html
+++ b/src/html/corredor-footer.html
@@ -6,8 +6,7 @@
 </div>
 <div id="footer-links">
   <ul>
-    <li><a href="/about">Neo</a></li>
-    <li><a href="http://neo.s21.xrea.com/">Neo's World</a></li>
+    <li><a href="https://neos21.net/">Neo's World</a></li>
     <li><a href="https://neos21.hatenablog.com/" id="footer-link-active">Corredor</a></li>
     <li><a href="https://neos21.hatenablog.jp/">Murga</a></li>
     <li><a href="https://neos21.hateblo.jp/">El Mylar</a></li>
